--- a/app/src/main/res/layout/fragment_notif.xml
+++ b/app/src/main/res/layout/fragment_notif.xml
@@ -1,8 +1,53 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context="app.patuhmobile.module.Notif.NotifFragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/size_15dp"
+            android:tint="@color/colorBlack"
+            android:src="@drawable/ic_keyboard_arrow_left" />
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="30dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_logo_white"
+            android:tint="@color/palleteaccentcyan"
+            android:gravity="center"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="2"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/size_5dp"
+            android:layout_weight="0.7"
+            android:background="@color/palleteaccentcyan"/>
+
+        <View
+            android:layout_weight="1.3"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/size_5dp"
+            android:background="@color/palleteaccentpurpledark"/>
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -387,4 +432,4 @@
 
 
 
-</FrameLayout>
+</LinearLayout>
