--- a/app/src/main/res/layout/fragment_ujian.xml
+++ b/app/src/main/res/layout/fragment_ujian.xml
@@ -5,6 +5,51 @@
     android:orientation="vertical"
     tools:context="app.patuhmobile.module.Ujian.UjianFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/size_15dp"
+            android:tint="@color/colorBlack"
+            android:src="@drawable/ic_keyboard_arrow_left" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:text="UJIAN SIM"
+            android:textSize="@dimen/text_size19"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="2"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/size_5dp"
+            android:layout_weight="0.7"
+            android:background="@color/palleteaccentcyan"/>
+
+        <View
+            android:layout_weight="1.3"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/size_5dp"
+            android:background="@color/palleteaccentpurpledark"/>
+    </LinearLayout>
+
     <RelativeLayout
         android:id="@+id/btnsima"
         android:layout_width="match_parent"
